--- a/css/home.css
+++ b/css/home.css
@@ -10,7 +10,7 @@ body{
 .header_superior{
     width: 100%;
     height: 100px;
-    background-color: white;
+    background-color: black;
     justify-content: space-between;
     display: flex;
 }
@@ -19,14 +19,24 @@ body{
     align-items: center;
     display: flex;
     justify-content: center;
+    a{
+        color: white;
+        padding-left: 20px ;
+        font-size: 45px;
+    }
 }
 .header_superior nav{
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.header_superior nav a:hover{
+    transition: 0.2s;
+    color: gray;
+
+}
 .header_superior nav a{
-    color: black;
+    color: white;
     margin: 0 35px;
     margin-right: 20px;
     margin-left: 20px;
@@ -53,9 +63,12 @@ main .container .container_texto{
 #ContainerTexto{
     font-size: 60px;
     margin-bottom: 75px;
-    margin-left: 30px;
+    margin-left: 10px;
 }
 .container .links_container{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     width: 120%;
     text-align: center;
     display: flex;
@@ -64,8 +77,8 @@ main .container .container_texto{
     color: black;
     background-color: white;
     font-family: "Open Sans", sans-serif;
-    height: 30px;
-    width: 70%;
+    height: 40px;
+    width: 80%;
     border: 1.75px solid black;
     border-radius: 15px;
     margin: 0 35px;
