--- a/css/home.css
+++ b/css/home.css
@@ -2,10 +2,10 @@
 body{
     background-image:  linear-gradient(45deg, #5de0e6, #014bae);
     background-repeat: no-repeat;
-    height: 100vh;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
-    
+    width: 100%;
+    height: 100%;
 }
 .header_superior{
     width: 100%;
@@ -41,12 +41,21 @@ body{
     margin-right: 20px;
     margin-left: 20px;
 }
+
 /* parte do main */
-main{
+.home{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
     width: 100%;
+    justify-content: space-around;
+    
+}
+main{
+    
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-content: center;
+    display: inline-block;
 }
 /*parte do texto*/
 .container{
@@ -97,7 +106,92 @@ main .container_img img{
     height: 100%;
     width: 100%;
     margin-right: 20%;
+/* section Artistas */
+
 }
+.Artistas{
+    width: 90%;
+    height: 90%;
+    display: inline-block;
+    align-content: center;
+    justify-content: center;
+    
+}
+.Artistas div{
+    gap: 20;
+}
+.Titulo{
+    height: 20%;
+    text-align: center;
+}
+.Titulo h1{
+    font-size: 35px;
+    font-weight: 100;
+    font-style: normal;
+}
+.img_cantores{
+    transition: 1.5s;
+    width: 100%;
+    height: 60%;
+    display: flex;
+    justify-content:center;
+    gap: 5%;
+}
+.img_cantores div{
+    transition: 1.5s;
+    height: 80%;
+    width: 20%;
+    display: block;
+    justify-content: center;
+    text-align: center;
+    align-content: center;
+    align-content: center;
+    background-color: white;
+    border-radius: 0px 50px;
+    overflow-y: hidden;
+}
+.img_cantores div img{
+    transition: 0.5s;
+    padding-top: 10px;
+    border-radius: 0 50px  0 0 ;
+    height: 60%;
+    width: 90%;
+}
+.img_cantores div h2{
+    transition: 0.5s;
+    font-size: 25px;
+    font-weight: 600;
+    font-style: normal;
+}
+.img_cantores div h3{
+    transition: 0.5s;
+    font-size: 18px;
+    font-weight: 300;
+}
+.button_action{
+    height: 20%;
+    text-align: center;
+}
+#btn_confira{
+    height: 25%;
+    background: none;
+    border: none;
+    border-radius: 20px;
+    background-color: #7fbadc;
+}
+#btn_confira a{
+    padding: 10px 20px ;
+    text-decoration: none;
+    color: black;
+}
+
+
+
+
+
+
+
+
 /*footer*/
 .Contatos{
     position: absolute;
