--- a/src/StyleGeral/style.css
+++ b/src/StyleGeral/style.css
@@ -10,3 +10,10 @@ a{
 ul{
     list-style: none;
 }
+.body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
