--- a/src/home/css/artista-semana/ArtistaSemanaResponsivo.css
+++ b/src/home/css/artista-semana/ArtistaSemanaResponsivo.css
@@ -1,49 +1,100 @@
 @media screen and (max-width: 768px) {
     .artistas-semana{
         display: none;
-        overflow-y: scroll;
-        
-        
     }
-    
-    /*carrossel*/
-    .artistas-semana-mobile{
-        display: flex;
+    .mobile-artistas-semana{
+        max-width: 768px;
+        margin: 0 auto;
         width: 100%;
-        height: 80vh;
+        border-radius: 10px;
+        height: 400px;
+        overflow: hidden;
+        /* border: 3px solid red; */
     }
-    .container-carrossel{
-        display: inline;
-        width: 100%;
-        height: 100px;
-    }
-    #carrossel{
-        width: 100px;
-        position: absolute;
-        left: 100%;
+    .slides{
+        width: 400%;
+        
+        height: 400px;
         display: flex;
+    }
+    .slides input{
+        display: none;
+    }
+    .slide{
+        width: 100%;
         position: relative;
-        border: 3px solid red;
+        text-align: center;
     }
-    #item{
+    .slide img{
+        border-radius: 20px;
+        width: 600px;
+        height: 100%;
+    }
+    #img-1{
+        padding-right: 25%;
+    }
+    #img-3{
+        width: 600px;
+        height: 100%;
+        margin: 0%;
+    }
+    .manual-navigation{
         position: absolute;
-        left: 100%;
-        width: 100px;
-        height: 50px;
-        animation: autoRun 10s line infinite;
-    }
-    .item img{
         width: 100%;
-        border: 10px solid brown;
         
-        
+        margin-top: -40px;
+        display: flex;
+        justify-content: center;
+        /* border: 3px solid red; */
     }
-    @keyframes autoRun {
-        from{
-            left: 100%;
-        }
-        to{
-            left: -50px
-        }
+    .manual-btn{
+        border: 2px solid white;
+        padding: 5px;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+    .manual-btn:not(:last-child){
+        margin-right: 40px;
+    }
+    .manual-btn:hover{
+        transition: 0.25s;
+        animation-duration: 0.10s;
+    }
+    #radio1:checked ~ .um{
+        margin-left: 0;
+    }
+    #radio2:checked ~ .um{
+        margin-left: -75%;
+    }
+    #radio3:checked ~ .um{
+        margin-left: -237.1%;
+        z-index: 100;
+    }
+    .navigation-auto div{
+        border: 3px solid black;
+        padding: 5px;
+        border-radius: 10px;
+        cursor: pointer;
+        transition:1s ;
+    }
+    .navigation-auto{
+        overflow: hidden;
+        position: absolute;
+        width: 100%;
+        margin-top: 360px;
+        display: flex;
+        justify-content: center;
+    }
+    .navigation-auto div:not(:last-child){
+        margin-right: 40px;
+    }
+    #radio1:checked ~ .navigation-auto .auto-btn1{
+        background-color: white;
+    }
+    #radio2:checked ~ .navigation-auto .auto-btn2{
+        background-color: white;
+    }
+    #radio3:checked ~ .navigation-auto .auto-btn3{
+        background-color: white;
     }
 }
