--- a/src/home/css/body/body.css
+++ b/src/home/css/body/body.css
@@ -1,5 +1,5 @@
 body{
-    background-image:  linear-gradient(45deg, #5de0e6, #014bae);
+    background-image:  linear-gradient(90deg, #5cdee5, #014bae);
     background-repeat: no-repeat;
     height: 100%;
     font-family: "Open Sans", sans-serif;
