--- a/src/home/css/buttons/itens.css
+++ b/src/home/css/buttons/itens.css
@@ -1,9 +1,13 @@
 .btn-home{
     background-color: white/*#90d5e7*/;
-    border: 1px solid black;
     border-radius: 25px;
+    height: 40px;
+    width: 150px;
+    border: 0px;
     padding: 10px 10px 10px;
     cursor: pointer;
+    font-size: 16px;
+
 }
 .btn-home:hover{
     background-color: rgb(182, 172, 172)  ;
