--- a/src/home/css/artista-semana/ArtistaSemanaResponsivo.css
+++ b/src/home/css/artista-semana/ArtistaSemanaResponsivo.css
@@ -105,3 +105,42 @@
         background-color: white;
     }
 }
+@media screen and (max-width: 400px){
+    
+    
+    .slides{
+        width: 150%; 
+        height: 400px;
+        display: flex;
+    }
+    .slides input{
+        display: none;
+    }
+    .slide{
+        width: 450px;
+        position: relative;
+        text-align: center;
+        margin: 0 5% 0;
+
+    }
+    .slide img{
+        width: 375px;
+        border-radius: 20px;
+        height: 100%;
+    }
+    
+    
+    
+    #radio1:checked ~ .um{
+        margin-left: -0;
+        transition: 1s;
+    }
+    #radio2:checked ~ .um{
+        margin-left: -83.75%;
+        transition: 1s;
+    }
+    #radio3:checked ~ .um{
+        margin-left: -166%/*-237.1%*/;
+        transition: 1s;
+    }
+}
