--- a/src/components/ComponentesGerais/body/body.css
+++ b/src/components/ComponentesGerais/body/body.css
@@ -1,8 +1,10 @@
+
 body{
     background-image:  linear-gradient(90deg, #5cdee5, #014bae);
     background-repeat: no-repeat;
     height: 100%;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
