--- a/src/components/ComponentesGerais/header/header.css
+++ b/src/components/ComponentesGerais/header/header.css
@@ -5,7 +5,7 @@
 
 header{
     position: static;
-    height: 14vh;
+    height: 12vh;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -15,13 +15,14 @@ header{
     border: 3px solid black;   
 }
 .header-superior{
+    align-content: center;
     padding: 0 5% 0;
     border-radius: 25px;
     z-index: 100;
     top: 0;
     left: 0;
     width: 90%;
-    height: 12vh;
+    height: 10vh;
     position: fixed;
     background-color: black;
     padding-bottom: 10px;
@@ -31,7 +32,7 @@ header{
     opacity: 100%;
     transition: 0.25s;
 }
-.nav-bar{display: flex; justify-content: space-between; padding: 1.5rem 6rem;}
+.nav-bar{display: flex; justify-content: space-between; height: 100%; /*padding: 1.5rem 6rem;*/ padding: 1rem 2rem;}
 .logo{
     display: flex;
     align-items: center;
