--- a/src/components/ComponentesGerais/header/homePageResponsive.css
+++ b/src/components/ComponentesGerais/header/homePageResponsive.css
@@ -11,10 +11,10 @@
         padding: 0px;
         margin: 0px;
     }
-    .nav-bar{padding: 1.5rem 4rem;}
+    .nav-bar{padding: 1.2rem 4rem;}
     .nav-item{display: none;}
     .login-btn{display: none;}
-    .mobile-menu-icon{display: block;}
+    .mobile-menu-icon{display: block; padding-top: 5%;}
     .mobile-menu-icon button{
         height: 30px;
         width: 30px;
@@ -29,7 +29,7 @@
         display: block;
     }
     .mobile-menu{
-        padding-top: 5%;
+        padding-top: 3%;
         width: 100%;
         z-index: 20;
         position: fixed;
