--- a/src/home/css/buttons/itens.css
+++ b/src/home/css/buttons/itens.css
@@ -7,8 +7,11 @@
     padding: 10px 10px 10px;
     cursor: pointer;
     font-size: 16px;
-
 }
 .btn-home:hover{
+    transition: 0.5s;
     background-color: rgb(182, 172, 172)  ;
+}
+.btn-home a{
+    color: black;
 }
