--- a/src/home/css/AragePro/present-arage-pro.css
+++ b/src/home/css/AragePro/present-arage-pro.css
@@ -1,5 +1,55 @@
-.present-arage-direita{
+.present-arage-pro{
         display: flex;
         position: relative;
+        width: 100%;
+        height: 100vh;
+    }
     
-}
+    .present-arage-pro article{
+        width: 50%;
+        height: 78vh;
+        /* border: 3px solid black; */
+        text-align: center;
+        border: 3px solid black;
+        overflow: hidden;
+        display: block;
+        justify-content: center;
+
+    } 
+    .titulo-arage-pro{
+        height: 15%;
+        border: 3px solid black;
+      h1{color: white; font-size: 40px;}  
+    }
+    .present-arage-esquerda{
+        
+    }
+    .text-arage-pro{
+        width: 60%;
+        height: 85%;
+        display: block;
+        text-align: justify;
+        border: 3px solid black;
+        margin-top: 170px;
+    }
+    .present-arage-esquerda .text-arage-pro > h1{
+        text-align: center; 
+    }
+    
+    .text-arage-pro > p{
+        line-height: 1.5rem;
+        word-spacing: 3px;
+        font-size: 1rem;
+        padding: 0 15% 0;
+    }
+    
+    .present-arage-direita{
+        text-align: justify;
+    }
+    
+    #arage-pro-img{
+        border-radius: 0 15% 0 15%;
+        width: 90%;
+        height: 60%;
+        text-align: justify;
+    }
