--- a/src/home/css/ArtistasNew/artistasNew.css
+++ b/src/home/css/ArtistasNew/artistasNew.css
@@ -1,4 +1,4 @@
-.artista-new{
+/* .artista-new{
     display: flex;
     position: relative;
     width: 100%;
@@ -45,5 +45,69 @@
     height: 10%;
     align-items: center;
     border: 3px solid black;
+}   */
+
+.artista-new{
+    /* display: flex; */
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+.teste{
+    display: flex;
+}
+.artista-new article{
+    width: 50%;
+    /* border: 3px solid black; */
+    text-align: center;
+}
+.titulo-artista-new{
+    width: 100%;
+    text-align: center;
+    border: 3px solid black;
+}
+
+.new-artista-esquerda{
+    text-align: justify;
+}
+.text-new-artista{
+    width: 100%;
+    height: 30%;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin-top: 170px;
+    /* text-align: center; */
+    
+
 }  
+.button-new-artista{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 40%;
+    align-items: center;
+}  
+.new-artista-esquerda .text-new-artista > h1{
+    text-align: center;
+}
+.text-new-artista > p{
+    line-height: 1.5rem;
+    word-spacing: 3px;
+    font-size: 1rem;
+    padding: 0 15% 0;
+}
+#new-artista-img{
+    border-radius: 0 15% 0 15%;
+    width: 70%;
+    height: 80%;
+    text-align: center;
+    /* margin-top: 40px; */
+}
+#nome-artista-hwasa{
+    text-align: left;
+    margin-left: 94px;
+    margin-top: 60px;
+}
+
 
