--- a/src/home/css/AragePro/present-arage-pro.css
+++ b/src/home/css/AragePro/present-arage-pro.css
@@ -10,7 +10,6 @@
         height: 78vh;
         /* border: 3px solid black; */
         text-align: center;
-        border: 3px solid black;
         overflow: hidden;
         display: block;
         justify-content: center;
@@ -18,28 +17,32 @@
     } 
     .titulo-arage-pro{
         height: 15%;
-        border: 3px solid black;
-      h1{color: white; font-size: 40px;}  
+        /* border: 3px solid black; */
+        h1{color: white; font-size: 40px; padding-right: 15%;}  
+      
     }
     .present-arage-esquerda{
-        
+        display: flex;
+        justify-content: end;
+        align-content: center;
+        /* border: 3px solid black; */
+
     }
     .text-arage-pro{
-        width: 60%;
-        height: 85%;
-        display: block;
+        width: 100%;
+        height: 60%;
         text-align: justify;
-        border: 3px solid black;
-        margin-top: 170px;
+        margin-left: 15%;
+        /* border: 3px solid black; */
     }
     .present-arage-esquerda .text-arage-pro > h1{
         text-align: center; 
     }
     
     .text-arage-pro > p{
-        line-height: 1.5rem;
+        line-height: 2rem;
         word-spacing: 3px;
-        font-size: 1rem;
+        font-size: 24px;
         padding: 0 15% 0;
     }
     
@@ -49,7 +52,7 @@
     
     #arage-pro-img{
         border-radius: 0 15% 0 15%;
-        width: 90%;
-        height: 60%;
+        width: 100%;
+        height: 100%;
         text-align: justify;
     }
